--- a/opis.html
+++ b/opis.html
@@ -62,9 +62,8 @@ V aplikacijo se trenutno lahko vpišemo preko ehr idja. Po prijavi se nam odpre 
             <h3 class="panel-title">Master/detail načrtovalski vzorec</h3>
           </div>
           <div class="panel-body">
-            <!-- ZAČETEK: Master/detail načrtovalski vzorec -->
-            <p><strong>TO-DO</strong>: Na tem mestu morate navesti uporabljen master/detail načrtovalski vzorec in na kakšen način ga nameravate uporabiti.</p>
-            <!-- KONEC: Master/detail načrtovalski vzorec -->
+            Master/detail vzorec sem uporabil na površini grafa desno zgoraj. Uporabnik lahko iz seznama izbere način pregleda(graf/podatki), in 
+            aplikacija mu glede na izbor odpre pogled z izbranim načinom.
           </div>
         </div>
         <div class="panel panel-default">
@@ -72,9 +71,8 @@ V aplikacijo se trenutno lahko vpišemo preko ehr idja. Po prijavi se nam odpre 
             <h3 class="panel-title">Uporabljena tehnika za vizualizacijo podatkov</h3>
           </div>
           <div class="panel-body">
-            <!-- ZAČETEK: Uporabljeni zunanji viri podatkov -->
-            <p><strong>TO-DO</strong>: Na tem mestu je potrebno navesti uporabljeno tehniko vizualizacije podatkov (za pomoč lahko uporabite primer iz <a href="https://github.com/mbostock/d3/wiki/Gallery" target="_blank">D3.js galerije</a>) in zakaj je bila ta tehnika izbrana.</p>
-            <!-- KONEC: Uporabljeni zunanji viri podatkov -->
+            Za vizualizacijo podatkov sem uporabil stolpčni graf. Izbral sem ga ker se na tem grafu najboljše kronološko predstavi podatke. 
+            V mojem primeru sem na njem predstavil spreminjanje kvnega tlaka.
           </div>
         </div>
       </div>
